--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestioneutenti
+spring.datasource.username= postgres
+spring.datasource.password= postgres
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= create
+
+
+spring.jpa.hibernate.show-sql=true
